<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.emerchantpay.gateway.androidgenesissample.activities.TransactionDetailsActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            tools:context="com.emerchantpay.gateway.genesisandroidsample.TransactionDetailsActivity"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transactionIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/transactionid_label" />

            <EditText
                android:id="@+id/transactionIdText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/transactionIdLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/amountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transactionIdText"
                android:text="@string/amount_label" />

            <EditText
                android:id="@+id/amountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/amountLabel"
                android:layout_weight="1"
                android:text="1.00"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/currencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amountText"
                android:text="@string/currency_label" />

            <Spinner
                android:id="@+id/currencySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/currencyLabel"
                android:spinnerMode="dropdown"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <TextView
                android:id="@+id/usageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/currencySpinner"
                android:text="@string/usage_label" />

            <EditText
                android:id="@+id/usageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/usageLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/customerEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/currencySpinner"
                android:text="@string/customeremail_label" />

            <EditText
                android:id="@+id/customerEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/customerEmailLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/customerPhoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerEmailText"
                android:text="@string/customerphone_label" />

            <EditText
                android:id="@+id/customerPhoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/customerPhoneLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/firstnameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerPhoneText"
                android:text="@string/firstname_label" />

            <EditText
                android:id="@+id/firstnameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/firstnameLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lastnameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstnameText"
                android:text="@string/lastname_label" />

            <EditText
                android:id="@+id/lastnameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lastnameLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/primaryAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastnameText"
                android:text="@string/address1_label" />

            <EditText
                android:id="@+id/primaryAddressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/primaryAddressLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/secondaryAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/primaryAddressText"
                android:text="@string/address2_label" />

            <EditText
                android:id="@+id/secondaryAddressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/secondaryAddressLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/zipcodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/secondaryAddressText"
                android:text="@string/zipcode_label" />

            <EditText
                android:id="@+id/zipcodeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/zipcodeLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zipcodeText"
                android:text="@string/city_label" />

            <EditText
                android:id="@+id/cityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cityLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />


            <TextView
                android:id="@+id/stateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cityText"
                android:text="@string/state_label" />

            <EditText
                android:id="@+id/stateEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/stateLabel"
                android:inputType="text"/>

            <TextView
                android:id="@+id/countryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cityText"
                android:text="@string/country_label" />

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/countryLabel"
                android:spinnerMode="dropdown"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <TextView
                android:id="@+id/notificationUrlLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/countrySpinner"
                android:text="@string/notificationurl_label" />

            <EditText
                android:id="@+id/notificationUrlText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/notificationUrlLabel"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textUri" />

            <Button
                android:id="@+id/payButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notificationUrlText"
                android:layout_gravity="center_horizontal"
                android:onClick="loadPaymentView"
                android:text="@string/pay_label" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
