<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.emerchantpay.gateway.androidgenesissample.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogoView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_logo_image"
            android:background="@drawable/genesis_logo"
            app:srcCompat="@drawable/genesis_logo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/demoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/imageLogoView"
            android:text="@string/demo_label" />

        <LinearLayout
            android:id="@+id/labelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/demoLabel">

            <TextView
                android:id="@+id/privacyPolicyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_home_labels"
                android:gravity="left"
                android:text="@string/privacy_policy_hyperlink" />

            <TextView
                android:id="@+id/termsandconditionsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_home_labels"
                android:gravity="right"
                android:text="@string/terms_and_conditions_hyperlink" />

        </LinearLayout>

        <TextView
            android:id="@+id/selectTransactionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelLayout"
            android:gravity="center"
            android:text="@string/select_transaction_label"
            android:textStyle="bold"/>

        <ListView
            android:id="@+id/transactionTypesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/selectTransactionLabel" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
